@@ -1,0 +1,8 @@
+#<IfModule mod_rewrite.c>
+#  RewriteEngine On
+#  #RewriteBase /
+#  RewriteCond %{REQUEST_FILENAME} !-f
+#  RewriteCond %{REQUEST_FILENAME} !-d
+#  RewriteRule ^(.*)$ /index.php/$1 [L,QSA]
+#</IfModule>
+
